# fastapi-plotly-dash

./: app.py  dashapp.py  pyproject.toml
