[tool.poetry]
name = "fastapi-plotly-dash"
version = "0.1.0"
description = ""
authors = ["Miroslav Mlynarik <mmlynarik@sk.uss.com>"]

[tool.poetry.dependencies]
python = "3.9"
dash = "^2.0.0"
pandas = "^1.3.4"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
